--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "ngx-mask": "^11.1.4",
