--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "angular-responsive-carousel": "^2.1.2",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-mask": "^11.1.4",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.4",
