--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ngx-mask": "^11.1.4",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.4",
+    "swiper": "^7.2.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
